# ALAFS

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  NOTES.md  PROMPT.md  README.md  alafs.sh  build.sh  common.sh  ghidra-mcp.sh  pyproject.toml  run.sh
prompts/: FUZZING.md  HARNESS.md
src/: app.py  constants.py  entrypoint.sh  helpers.py  log.py  models.py  security.yaml
