[project]
name = "alafs"
version = "0.1.0"
description = "Android LLM-driven Automated Fuzzing System"
authors = [
    {name = "kernelkrise"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp (>=1.26.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
